Add: preprocessing for final dataset

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2434,10 +2434,249 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "count_total = 0\n",
+    "with open(\"interactions_30_ch_no_bots\") as f:\n",
+    "    with open('final_interactions_count', 'w') as outfile:\n",
+    "        for i in f.readlines():\n",
+    "            line = i.split()\n",
+    "            if int(line[2]) >= 5:\n",
+    "                outfile.write(i)\n",
+    "                count_total += int(line[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    "from utils import Interaction\n",
+    "\n",
+    "data = []\n",
+    "with open('final_interactions_count') as csvfile:\n",
+    "    datareader = csv.reader(csvfile, delimiter=' ')\n",
+    "    for subreddit, user, comments, _ in datareader:\n",
+    "        data.append([user, subreddit, int(comments)])\n",
+    "\n",
+    "data = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_users = len(np.unique(data[:, 0]))\n",
+    "num_items = len(np.unique(data[:, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactions = Interaction(data, num_users, num_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interaction_ = interactions.get_interaction_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28919975"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([interaction_[u][i] for u in interaction_.keys() for i in interaction_[u].keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function utils.Interaction.get_interaction_dict.<locals>.<lambda>.<locals>.<lambda>()>,\n",
+       "            {'exmormon': 17, 'buildapc': 31, 'postrock': 13})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interaction_['axehammer28']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm_notebook\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "785108af49e74c1a8fe7523ee42d3e23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data/RC_2015-01') as infile:\n",
+    "    with open('data/comments_final', 'w') as outfile:\n",
+    "        for line in tqdm_notebook(infile):\n",
+    "            comment = json.loads(line)\n",
+    "            subreddit = comment['subreddit']\n",
+    "            user = comment['author']\n",
+    "            id_ = comment['id']\n",
+    "            body = comment['body']\n",
+    "            \n",
+    "            if user in interaction_ and subreddit in interaction_[user] and interaction_[user][subreddit] != 0 and len(body) >= 30:\n",
+    "                interaction_[user][subreddit] -= 1\n",
+    "\n",
+    "                cmnt = {}\n",
+    "                cmnt['subreddit'] = subreddit\n",
+    "                cmnt['user'] = user\n",
+    "                cmnt['id'] = id_\n",
+    "                cmnt['body'] = body\n",
+    "\n",
+    "                outfile.write(json.dumps(cmnt) + '\\n')\n",
+    "\n",
+    "                del cmnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score_hidden': False,\n",
+       " 'name': 't1_cnas8zv',\n",
+       " 'link_id': 't3_2qyr1a',\n",
+       " 'body': 'Most of us have some family members like this. *Most* of my family is like this. ',\n",
+       " 'downs': 0,\n",
+       " 'created_utc': '1420070400',\n",
+       " 'score': 14,\n",
+       " 'author': 'YoungModern',\n",
+       " 'distinguished': None,\n",
+       " 'id': 'cnas8zv',\n",
+       " 'archived': False,\n",
+       " 'parent_id': 't3_2qyr1a',\n",
+       " 'subreddit': 'exmormon',\n",
+       " 'author_flair_css_class': None,\n",
+       " 'author_flair_text': None,\n",
+       " 'gilded': 0,\n",
+       " 'retrieved_on': 1425124282,\n",
+       " 'ups': 14,\n",
+       " 'controversiality': 0,\n",
+       " 'subreddit_id': 't5_2r0gj',\n",
+       " 'edited': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads('{\"score_hidden\":false,\"name\":\"t1_cnas8zv\",\"link_id\":\"t3_2qyr1a\",\"body\":\"Most of us have some family members like this. *Most* of my family is like this. \",\"downs\":0,\"created_utc\":\"1420070400\",\"score\":14,\"author\":\"YoungModern\",\"distinguished\":null,\"id\":\"cnas8zv\",\"archived\":false,\"parent_id\":\"t3_2qyr1a\",\"subreddit\":\"exmormon\",\"author_flair_css_class\":null,\"author_flair_text\":null,\"gilded\":0,\"retrieved_on\":1425124282,\"ups\":14,\"controversiality\":0,\"subreddit_id\":\"t5_2r0gj\",\"edited\":false}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactions12 = Interaction(data, num_users, num_items)\n",
+    "new_i = interactions12.get_interaction_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28919975"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([new_i[u][i] for u in new_i.keys() for i in new_i[u].keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2453,7 +2692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
