Add: tBPR code and AUC

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2572,6 +2572,495 @@
     "\n",
     "                del cmnt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "from tqdm import tqdm_notebook\n",
+    "import json\n",
+    "import string\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import word_tokenize\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'after',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'ain',\n",
+       " 'all',\n",
+       " 'am',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'any',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'be',\n",
+       " 'because',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'between',\n",
+       " 'both',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'can',\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'd',\n",
+       " 'did',\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'doing',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'down',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'further',\n",
+       " 'had',\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'has',\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'have',\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'having',\n",
+       " 'he',\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'i',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'just',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'ma',\n",
+       " 'me',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'o',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'only',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 're',\n",
+       " 's',\n",
+       " 'same',\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 't',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'there',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'through',\n",
+       " 'to',\n",
+       " 'too',\n",
+       " 'under',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 've',\n",
+       " 'very',\n",
+       " 'was',\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'we',\n",
+       " 'were',\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'what',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\",\n",
+       " 'y',\n",
+       " 'you',\n",
+       " \"you'd\",\n",
+       " \"you'll\",\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_words.add(string.punctuation.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_punct  = set(w for w in string.punctuation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'\\n',\n",
+       " '!',\n",
+       " '\"',\n",
+       " '#',\n",
+       " '$',\n",
+       " '%',\n",
+       " '&',\n",
+       " \"'\",\n",
+       " '(',\n",
+       " ')',\n",
+       " '*',\n",
+       " '+',\n",
+       " ',',\n",
+       " '-',\n",
+       " '.',\n",
+       " '/',\n",
+       " ':',\n",
+       " ';',\n",
+       " '<',\n",
+       " '=',\n",
+       " '>',\n",
+       " '?',\n",
+       " '@',\n",
+       " '[',\n",
+       " '\\\\',\n",
+       " ']',\n",
+       " '^',\n",
+       " '_',\n",
+       " '`',\n",
+       " 'a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'after',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'ain',\n",
+       " 'all',\n",
+       " 'am',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'any',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'be',\n",
+       " 'because',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'between',\n",
+       " 'both',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'can',\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'd',\n",
+       " 'did',\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'doing',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'down',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'further',\n",
+       " 'had',\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'has',\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'have',\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'having',\n",
+       " 'he',\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'i',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'just',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'ma',\n",
+       " 'me',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'o',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'only',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 're',\n",
+       " 's',\n",
+       " 'same',\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 't',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'there',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'through',\n",
+       " 'to',\n",
+       " 'too',\n",
+       " 'under',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 've',\n",
+       " 'very',\n",
+       " 'was',\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'we',\n",
+       " 'were',\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'what',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\",\n",
+       " 'y',\n",
+       " 'you',\n",
+       " \"you'd\",\n",
+       " \"you'll\",\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves',\n",
+       " '{',\n",
+       " '|',\n",
+       " '}',\n",
+       " '~'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_words_extended = stop_words.union(str_punct).union('\\n')\n",
+    "stop_words_extended"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45d7a4ebff52499cb97359ef383b1f4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "subreddit_comments = defaultdict(list)\n",
+    "\n",
+    "with open('data/comments_final') as infile:\n",
+    "    for line in tqdm_notebook(infile):\n",
+    "        comment = json.loads(line)\n",
+    "        word_tokens = comment['body'].split()\n",
+    "        filtered_sentence = [w.lower() for w in word_tokens if not w in stop_words_extended]\n",
+    "        subreddit = comment['subreddit']\n",
+    "        \n",
+    "\n",
+    "        subreddit_comments[subreddit].extend(filtered_sentence)"
+   ]
   }
  ],
  "metadata": {
