Add: color to graphs

--- a/models.ipynb
+++ b/models.ipynb
@@ -1712,7 +1712,7 @@
     "ys = aucs_vs_factors\n",
     "axes = plt.axes()\n",
     "plt.semilogx(xs, ys, '-gD', label='BPR')\n",
-    "plt.semilogx(xs, aucs_als, '-g^', label='ALS')\n",
+    "plt.semilogx(xs, aucs_als, '-g^', label='ALS', color='orange')\n",
     "plt.semilogx(xs, aucs_tbpr, '-go', label='tBPR')\n",
     "axes.set_ylim([0.60, 1.0])\n",
     "axes.set_xticks([10, 20, 50, 100])\n",
